v0.2.9 (2021-10-02)
- sources: fix www.ovostreams.com

v0.2.8 (2021-09-20)
- sources(streams100): enable

v0.2.7 (2021-09-15)
- providers: add soccerstreamhd.com (soccer)
- other cleanup

v0.2.6 (2021-09-14)
- remove duplicated function by extracting common functions
- remove dead sources
- first/second iframe into search method extracted out

v0.2.5 (2021-09-14)
- sources(generic): improve search
- sources: add blacktiesports.net
- sources: add givemenbastreams.com
- sources: add myoplay.club
- sources: add weakstreams.com

v0.2.4 (2021-09-14)
- providers(soccerstreamlinks_soccer): hotfix events URL

v0.2.3 (2021-09-13)
- create new release; something wrong about the last one

v0.2.2 (2021-09-13)
- providers: temporary disable streams100

v0.2.1 (2021-09-12)
- providers(soccerstreamlinks_soccer): added league name to labels
- sources: add liveonscore.to
- sources: add hockeyweb.site
- sources: add thecyclingentertainment.com
- sources: add nflscoop.net
- sources: add uhdstreams.club
- sources: fix bdnewszh.com

v0.2.0 (2021-09-11)
- providers: add soccerstreamlinks.com (soccer)

v0.1.6 (2021-08-21)
- sources: fix ovostreams.com
- sources: add bdnewszh.com
- sources: add daddylive.me

v0.1.5 (2021-08-20)
- sources: add sportnews.to

v0.1.4 (2021-08-14)
- sources: add techoreels.com
- sources: add nflgamezone.com

v0.1.3 (2021-08-14)
- bump version to 0.1.3

v0.1.2 (2021-08-07)
- providers(streams100): update event URL

v0.1.1 (2021-04-04)
- sources: add mazystreams.xyz
- sources: add alexsports.live
- sources: add streamsports.pro
- sources: add allsportsmedia.live
- sources: add streamspass.com
- sources: fix hockeynews.site

v0.1.0 (2021-04-03)
- switch to python3 to make it work on Kodi 19 Matrix

v0.0.8 (2020-12-27)
- providers(streams100): update root URL

v0.0.7 (2020-10-04)
- sources: add buffstream1.com
- sources: add hockeynews.site
- sources: add hhdstreams.club
- sources: add mazymedias.com
- sources: add fightpass.site
- sources: add liveonscore.tv